--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "it-is",
   "description": "terse functional assertion framework",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "homepage": "http://github.com/dominictarr/it-is",
   "repository": "git://github.com/dominictarr/it-is.git",
   "author": "Dominic Tarr <dominic.tarr@gmail.com>",
@@ -12,6 +12,9 @@
   "dependencies": {
     "traverser": "0.0.x"
   , "render": ">=0.0.2"
+  },
+  "devDependencies": {
+    "expresso": ">=0.6.0"
   },
   "scripts": {
     "test": "expresso test/*.js"
