--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "it-is",
   "description": "terse functional assertion framework",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "homepage": "http://github.com/dominictarr/it-is",
   "repository": "git://github.com/dominictarr/it-is.git",
   "author": "Dominic Tarr <dominic.tarr@gmail.com>",
@@ -17,10 +17,10 @@
   , "style": "0.1.x"
   },
   "devDependencies": {
-    "expresso": ">=0.6.0"
+    "synct": "1"
   },
   "scripts": {
-    "test": "expresso test/*.js"
+    "test": "synct test/*.js"
   },
   "engines": {
     "node": ">=0.2.0"
